[package]
name = "image-echo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1", features = ["full"]}
lazy_static = "1.4.0"